# SyncClip

./: CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: client.cpp.4D2A9FDD3E1E79CE.idx  client.hpp.DD851B6574085C04.idx  clipboard_manager.cpp.AD2B86866AF80BFB.idx  clipboard_manager.hpp.4F4CE53AAA38FFCA.idx  command_utils.cpp.6436FA41914D6328.idx  command_utils.cpp.96A63C10EA9E628D.idx  command_utils.hpp.067FAADB0710051D.idx  command_utils.hpp.119D8E4D19C2B11C.idx  config.cpp.0507B1E76C9AFE28.idx  config.cpp.6CB708151816D245.idx  config.hpp.27995B909F112C6F.idx  config.hpp.F86B37FED21511E0.idx  main.cpp.9FFA7E2F533E4053.idx  main.cpp.C10BB4AFEEA133AC.idx  server.cpp.318AD4232C735508.idx  server.hpp.E4656A8CEAFA0423.idx
clipboard/: clipboard_manager.cpp  clipboard_manager.hpp
config/: config.cpp  config.hpp  config_manager.cpp
network/: client.cpp  client.hpp  server.cpp  server.hpp
src/: main.cpp
src/clipboard/: clipboard_manager.cpp
src/config/: config_manager.hpp
src/network/: client.cpp  client.hpp  server.hpp
src/utils/: command_utils.cpp  command_utils.hpp
utils/: command_utils.hpp
